update: update and add swagger docs for zoom management
